--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "formik": "^2.2.9",
     "next": "12.0.10",
+    "next-auth": "^3.29.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
